# spamReport

./: .gitignore  README.md  docker-compose.yaml
docker-entrypoint-initdb.d/: data.js  mongo-init.js  scheme.js
rest-app/: Dockerfile  pyproject.toml
rest-app/src/: server.py
rest-app/src/factory/: __init__.py  config.py  db.py
rest-app/src/misc/: cast.py  date.py  db.py
rest-app/src/routes/: base.py  reports.py
rest-app/src/schemes/: body.py  meta.py  settings.py
web/src/: App.js
