[tool.poetry]
name = "report-api"
version = "0.0.1"
description = "REST API for db connections"
authors = ["Peter Sinkovicz <antsticky@gmail.com>"]
packages = [
    {include = "src"}
]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pymongo = "^4.6.1"
pydantic = "^2.6.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
server = "src.server:start"